modules/audio_processing/aec3/block_processor.cc
@@ -43,6 +43,8 @@ class BlockProcessorImpl final : public BlockProcessor {
 
   void GetMetrics(EchoControl::Metrics* metrics) const override;
 
+  void SetAudioBufferDelay(size_t delay_ms) override;
+
  private:
   static int instance_count_;
   std::unique_ptr<ApmDataDumper> data_dumper_;
@@ -232,6 +234,10 @@ void BlockProcessorImpl::GetMetrics(EchoControl::Metrics* metrics) const {
   const int block_size_ms = sample_rate_hz_ == 8000 ? 8 : 4;
   rtc::Optional<size_t> delay = render_buffer_->Delay();
   metrics->delay_ms = delay ? static_cast<int>(*delay) * block_size_ms : 0;
+}
+
+void BlockProcessorImpl::SetAudioBufferDelay(size_t delay_ms) {
+  render_buffer_->SetAudioBufferDelay(delay_ms);
 }
 
 }  // namespace
