modules/audio_processing/aec3/mock/mock_render_delay_buffer.h
@@ -53,6 +53,7 @@ class MockRenderDelayBuffer : public RenderDelayBuffer {
   MOCK_CONST_METHOD0(GetDownsampledRenderBuffer,
                      const DownsampledRenderBuffer&());
   MOCK_CONST_METHOD1(CausalDelay, bool(size_t delay));
+  MOCK_METHOD1(SetAudioBufferDelay, void(size_t delay_ms));
 
  private:
   RenderBuffer* FakeGetRenderBuffer() { return &render_buffer_; }
