modules/audio_processing/aec3/echo_canceller3_unittest.cc
@@ -104,6 +104,8 @@ class CaptureTransportVerificationProcessor : public BlockProcessor {
 
   void GetMetrics(EchoControl::Metrics* metrics) const override {}
 
+  void SetAudioBufferDelay(size_t delay_ms) override{};
+
  private:
   RTC_DISALLOW_IMPLICIT_CONSTRUCTORS(CaptureTransportVerificationProcessor);
 };
@@ -131,6 +133,8 @@ class RenderTransportVerificationProcessor : public BlockProcessor {
   void UpdateEchoLeakageStatus(bool leakage_detected) override {}
 
   void GetMetrics(EchoControl::Metrics* metrics) const override {}
+
+  void SetAudioBufferDelay(size_t delay_ms) override{};
 
  private:
   std::deque<std::vector<std::vector<float>>> received_render_blocks_;
